--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@
   box-sizing: border-box  
 }
 
-body {
+body, html {
     font-family: Arial, Helvetica, sans-serif;
     background-color: azure;
     color: rgb(12, 12, 12);
@@ -156,4 +156,11 @@ footer {
     background-color: #1e88e5;
     color: #ffffff;
     margin-top: 2rem;
+}
+
+.banner img {
+    width: 100vw;
+    height: 100vh;
+    object-fit: cover;
+    display: block;
 }
