--- a/style.css
+++ b/style.css
@@ -239,3 +239,10 @@ h4 {
     border-bottom: 1px solid #f4f1f1;
 }
 
+.day{
+    display: block;
+    width: 200px;
+    padding: 5px;
+    margin: 5px;
+
+}
